apps/speedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest
  labels:
    app.kubernetes.io/name: speedtest-tracker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: speedtest-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: speedtest-tracker
    spec:
      containers:
      - name: speedtest-tracker
        image: lscr.io/linuxserver/speedtest-tracker:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: speedtest-config
