apps/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest
spec:
  selector:
    app.kubernetes.io/name: speedtest-tracker
  ports:
  - port: 80
    targetPort: 80
