apps/speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker
  namespace: speedtest
  annotations:
    cert-manager.io/cluster-issuer: lan-ca-issuer
spec:
  rules:
  - host: speedtest.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-tracker
            port:
              number: 80
  tls:
  - hosts:
    - speedtest.lab
    secretName: speedtest-tls
